2022 11 02 - 프로그래머스 소수찾기(2) (코드실행을 통과, 채점은 테스트 1만 정답, 테스트 10부터는 시간초과)